v3_1. test_pages result.

--- a/default.config.ini
+++ b/default.config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 DENSITY_COEFF = 0.33
 OUT_PATH = out_files
+SEARCH_LEVELS = 2
 
 [URLS]
 TEST_URLS =
@@ -15,3 +16,4 @@ TEST_URLS =
     https://habrahabr.ru/post/303712/
     https://techcrunch.com/2016/06/20/vr-porn/
     http://www.bbc.com/news/world-middle-east-36578844
+    http://www.vesti.ru/doc.html?id=2767270
